--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Jaime Tavares Portfólio</title>
 </head>
 <body>
-    <a href="Snake/index.html">Snake game</a>
+    <p>My Portfolio - JaimeTavares-code</p>
+    <a href="Snake/index.html">Snake game</a><br>
+    <a href="ClickerGame/index.html">Clicker Game Demo</a>
 </body>
 </html>
