--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaime Tavares Portfólio</title>
 </head>
-<body>
+<body><center>
     <p>My Portfolio - JaimeTavares-code</p>
     <a href="Snake/index.html">Snake game</a><br>
     <a href="ClickerGame/index.html">Clicker Game Demo</a>
-</body>
+</center></body>
 </html>
