--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body><center>
     <p>My Portfolio - JaimeTavares-code</p>
-    <a href="Snake/index.html">Snake game</a><br>
+    <!--<a href="Snake/index.html">Snake game</a><br>
     <a href="ClickerGame/index.html">Clicker Game Demo</a>
+    -->
+
+    <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button>
+    <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button>
+
 </center></body>
 </html>
