--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jaime Tavares Portfólio</title>
+    <title>Jaime Tavares Portfolio</title>
 </head>
 <body><center>
     <p>My Portfolio - JaimeTavares-code</p>
-    <!--<a href="Snake/index.html">Snake game</a><br>
-    <a href="ClickerGame/index.html">Clicker Game Demo</a>
-    -->
 
     <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button>
     <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button>
