--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body><center>
     <p>My Portfolio - JaimeTavares-code</p>
-
-    <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button>
-    <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button>
+    <button type="button" onclick="window.open('projects/Snake/index.html','_blank');">Snake Game</button>
+    <button type="button" onclick="window.open('projects/ClickerGame/index.html','_blank');">The Fishy Game</button>
 
 </center></body>
 </html>
