--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaime Tavares Portfolio</title>
+    <style>
+
+        body{
+            color:white;
+            background-color: darkslategray;
+        }
+
+    </style>
 </head>
 <body><center>
     <p>My Portfolio - JaimeTavares-code</p>
