--- a/ClickerGame/index.html
+++ b/ClickerGame/index.html
@@ -32,10 +32,10 @@ body {
   border: 1px solid rgb(64 64 64 / 5%);
 }
 div#stopwatch {
-  font-size: 50px;
-  line-height: 60px;
+  font-size: 5.2vw;
   text-align: center;
   padding: 0 0 50px 0;
+  max-width: fit-content;
 }
 ul#buttons {
   list-style: none;
