--- a/ClickerGame/index.html
+++ b/ClickerGame/index.html
@@ -3,6 +3,7 @@
         <title>The Fishy Game</title>
          <meta name="viewport" content="width=device-width, initial-scale=1" />
          <meta https-equiv="X-UA-Compatible" content="ie=edge" />
+         <link rel="icon" type="image/x-icon" href="imgs/jt.png">
          <link rel="stylesheet" href="style.css" />
          <link rel="preconnect" href="https://fonts.gstatic.com">
          <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;300;400&display=swap" rel="stylesheet">
