--- a/index.html
+++ b/index.html
@@ -4,20 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="imgs/jt.png">
     <title>Jaime Tavares Portfolio</title>
     <style>
 
         body{
             color:white;
-            background-color: darkslategray;
+            background-color: rgb(83, 83, 83);
+        }
+
+        button{
+            color: black;
+            background-color: aqua;
+            border: none;
+            width: 15.2vw;
+            height: 12.6vh;
+            cursor: pointer;
+        }
+
+        button:hover{
+            color: white;
+            background-color: rgb(0, 212, 212);
+            width: 16.2vw;
+            height: 13.6vh;
         }
 
     </style>
 </head>
 <body><center>
     <p>My Portfolio - JaimeTavares-code</p>
-    <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button>
-    <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button>
+    <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button><br><br>
+    <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button><br><br>
+    <button type="button" onclick="window.open('https://github.com/jaimetavares-code/DiscordBot','_blank');">Discord Bot Repository</button>
 
 </center></body>
 </html>
