--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <p>My Portfolio - JaimeTavares-code</p>
     <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button><br><br>
     <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button><br><br>
-    <button type="button" onclick="window.open('https://github.com/jaimetavares-code/DiscordBot','_blank');">Discord Bot Repository</button>
+    <button type="button" onclick="window.open('https://github.com/jaimetavares-code/DiscordBot','_blank');">Discord Bot Repository</button><br><br>
+    <button type="button" onclick="window.open('OnlineStore/index.html','_blank');">Bootstrap cards demo</button><br><br>
 
 </center></body>
 </html>
