--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             color: black;
             background-color: aqua;
             border: none;
-            width: 15.2vw;
-            height: 12.6vh;
+            width: 200px;
+            height: 100px;
             cursor: pointer;
         }
 
         button:hover{
             color: white;
             background-color: rgb(0, 212, 212);
-            width: 16.2vw;
-            height: 13.6vh;
+            width: 210px;
+            height: 110px;
         }
 
     </style>
