--- a/Snake/index.html
+++ b/Snake/index.html
@@ -202,7 +202,7 @@ function toggleTable() {
 requestAnimationFrame(loop);
 </script>
 
-  <button onclick="toggleTable()">Toggle Controls</button><br>
+  <button onclick="toggleTable()">Toggle Controls on Phone</button><br>
     <table id="controls"><tr>
     </tr>
     <tr>
