--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="imgs/jt.png">
-    <title>Jaime Tavares Portfolio</title>
+    <title>Jaime Tavares Test Page</title>
     <style>
 
         body{
@@ -32,7 +32,6 @@
     </style>
 </head>
 <body><center>
-    <p>My Portfolio - JaimeTavares-code</p>
     <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button><br><br>
     <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button><br><br>
     <button type="button" onclick="window.open('https://github.com/jaimetavares-code/DiscordBot','_blank');">Discord Bot Repository</button><br><br>
