--- a/index.html
+++ b/index.html
@@ -4,38 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="imgs/jt.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <title>Jaime Tavares Test Page</title>
-    <style>
-
-        body{
-            color:white;
-            background-color: rgb(83, 83, 83);
-        }
-
-        button{
-            color: black;
-            background-color: aqua;
-            border: none;
-            width: 200px;
-            height: 100px;
-            cursor: pointer;
-        }
-
-        button:hover{
-            color: white;
-            background-color: rgb(0, 212, 212);
-            width: 210px;
-            height: 110px;
-        }
-
-    </style>
 </head>
-<body><center>
-    <button type="button" onclick="window.open('Snake/index.html','_blank');">Snake Game</button><br><br>
-    <button type="button" onclick="window.open('ClickerGame/index.html','_blank');">The Fishy Game</button><br><br>
-    <button type="button" onclick="window.open('https://github.com/jaimetavares-code/DiscordBot','_blank');">Discord Bot Repository</button><br><br>
-    <button type="button" onclick="window.open('OnlineStore/index.html','_blank');">Bootstrap cards demo</button><br><br>
+<body class="dark-mode">
+    <nav class="navbar">
+        <div class="navbar-left">
+            <a href="#home">Home</a>
+            <a href="#projects">Projects</a>
+            <a href="#about">About</a>
+        </div>
+        <div class="navbar-right">
+            <button id="dark-mode-toggle"><i class="fas fa-sun"></i></button>
+        </div>
+        <button class="burger-menu">&#9776;</button>
+    </nav>
+    <div id="home" class="content">
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio. Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.
+        </p>
+        <p>
+            Cras ac libero et magna vulputate semper. Mauris vel ex id libero volutpat varius. Fusce condimentum ipsum sed sem tincidunt, ut egestas felis fermentum. Phasellus molestie eros in gravida tempor. Suspendisse potenti. Nullam sed diam turpis. Sed fermentum nisl sit amet justo ultrices, at vulputate neque posuere. Nulla vitae nunc mollis, vestibulum ipsum sed, ornare turpis. Nulla sit amet volutpat magna. Curabitur dignissim semper eros, non pulvinar justo aliquam at.
+        </p>
+    </div>
+    <div id="projects" class="carousel-container">
+        <div class="carousel">
+            <div class="carousel-item">
+                <img src="imgs/snake.png" alt="Snake Game">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/fish.png" alt="Fish">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/git.png" alt="Git">
+            </div>
+            <div class="carousel-item">
+                <img src="imgs/boot.png" alt="Boot">
+            </div>
+        </div>
+        <div class="carousel-text">
+            <div class="text" id="text-snake">
+                This is the snake game.
+            </div>
+            <div class="text" id="text-fish">
+                Description for the fish image.
+            </div>
+            <div class="text" id="text-git">
+                Description for the git image.
+            </div>
+            <div class="text" id="text-boot">
+                Description for the boot image.
+            </div>
+        </div>
+    </div>
+    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('.carousel').slick({
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                arrows: true,
+                dots: true,
+            });
 
-</center></body>
+            // Update text based on the current slide
+            $('.carousel').on('afterChange', function(event, slick, currentSlide){
+                $('.carousel-text .text').hide();
+                $('.carousel-text .text').eq(currentSlide).show();
+            });
+
+            // Initially show the first text
+            $('.carousel-text .text').hide();
+            $('.carousel-text .text').eq(0).show();
+
+            // Dark mode toggle
+            $('#dark-mode-toggle').click(function(){
+                $('body').toggleClass('dark-mode');
+                if ($('body').hasClass('dark-mode')) {
+                    $('#dark-mode-toggle i').removeClass('fa-moon').addClass('fa-sun').css('color', 'white');
+                } else {
+                    $('#dark-mode-toggle i').removeClass('fa-sun').addClass('fa-moon').css('color', 'black');
+                }
+            });
+
+            // Set initial state for dark mode icon
+            if ($('body').hasClass('dark-mode')) {
+                $('#dark-mode-toggle i').removeClass('fa-moon').addClass('fa-sun').css('color', 'white');
+            }
+
+            // Burger menu toggle
+            $('.burger-menu').click(function(){
+                $('.navbar-left').toggleClass('active');
+            });
+        });
+    </script>
+</body>
 </html>
