--- a/ClickerGame/index.html
+++ b/ClickerGame/index.html
@@ -98,7 +98,8 @@ button {
     </ul></div><br>  
         <p><span id="displayClock()"></span></p>
           <p> "The fishy game" alpha 1.0</p>
-          <p><h2>NOTE:</h2><h3>The game won't save your progress if you leave or reload the page.</h3>
+          <p><h2>NOTE:</h2><h3>The game won't save your progress if you leave or reload the page.</h3><br>
+          <button><a href="https://jaimetavares-code.github.io/">Home</a></button>
         </center>
     </body>
     <script>
