--- a/OnlineStore/index.html
+++ b/OnlineStore/index.html
@@ -90,6 +90,7 @@ body {
 </head>
 <body>
     <div class="topnav" id="myTopnav">
+        <a href="https://jaimetavares-code.github.io/">Home</a>
         <a href="#index.html" class="active">Clothes Galore</a>
         <a href="tops.html">Tops!</a>
         <a href="bottoms.html">Bottoms!</a>
