--- a/Snake/index.html
+++ b/Snake/index.html
@@ -225,6 +225,7 @@ requestAnimationFrame(loop);
     </tr>
     </table>
 
+    <button style="width: 120px; height: 80px; color: white; background-color: black; border-color: white;"><a href="https://jaimetavares-code.github.io/" style="text-decoration: none; color:white">Home</a></button>
 
 <script>
 
