--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <div id="projects" class="carousel-container">
         <div class="carousel">
             <div class="carousel-item">
-                <img src="imgs/snake.png" alt="Snake Game">
+                <a href="Snake/index.html" ><img src="imgs/snake.png" alt="Snake Game"></a>
             </div>
             <div class="carousel-item">
-                <img src="imgs/fish.png" alt="Fish">
+                <a href="ClickerGame/index.html" ><img src="imgs/fish.png" alt="Fish"></a>
             </div>
             <div class="carousel-item">
-                <img src="imgs/git.png" alt="Git">
+                <a href="https://github.com/jaimetavares-code/DiscordBot" ><img src="imgs/git.png" alt="Git"></a>
             </div>
             <div class="carousel-item">
-                <img src="imgs/boot.png" alt="Boot">
+                <a href="OnlineStore/index.html" ><img src="imgs/boot.png" alt="Boot"></a>
             </div>
         </div>
         <div class="carousel-text">
