fixed burger menu

--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     <div id="projects" class="carousel-container">
         <div class="carousel">
             <div class="carousel-item">
-                <a href="Snake/index.html" ><img src="imgs/snake.png" alt="Snake Game"></a>
+                <img src="imgs/snake.png" alt="Snake Game">
             </div>
             <div class="carousel-item">
-                <a href="ClickerGame/index.html" ><img src="imgs/fish.png" alt="Fish"></a>
+                <img src="imgs/fish.png" alt="Fish">
             </div>
             <div class="carousel-item">
-                <a href="https://github.com/jaimetavares-code/DiscordBot" ><img src="imgs/git.png" alt="Git"></a>
+                <img src="imgs/git.png" alt="Git">
             </div>
             <div class="carousel-item">
-                <a href="OnlineStore/index.html" ><img src="imgs/boot.png" alt="Boot"></a>
+                <img src="imgs/boot.png" alt="Boot">
             </div>
         </div>
         <div class="carousel-text">
@@ -62,8 +62,7 @@
         </div>
     </div>
     <div id="about" class="content">
-        <img src="imgs/jt.png">
-        <p> 
+        <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec varius velit, at blandit purus. Integer non augue id felis ultricies convallis. Proin auctor justo at sapien efficitur, nec bibendum mi scelerisque. Morbi luctus nec orci at aliquet. Phasellus dictum sapien nec magna placerat, non aliquam tortor efficitur. Donec ultricies enim ac dui vehicula, nec ultricies erat pulvinar. Duis posuere felis quis orci laoreet, non pellentesque libero consequat. Aliquam erat volutpat. Mauris sodales, nisi nec ullamcorper feugiat, justo ex feugiat turpis, eu lacinia lacus nisi sit amet turpis. Aenean egestas lorem eu sem cursus, et sollicitudin nulla laoreet. Fusce at nisi vel risus vehicula pulvinar. Morbi faucibus elit non libero vestibulum, non cursus enim convallis. Nullam auctor odio sit amet felis fermentum, ac cursus libero posuere.
         </p>
         <p>
@@ -119,12 +118,17 @@
             // Burger menu toggle
             $('.burger-menu').click(function(){
                 $('.navbar-left').toggleClass('active');
+                if ($('.navbar-left').hasClass('active')) {
+                    $('.navbar-right').appendTo('.navbar-left');
+                } else {
+                    $('.navbar-right').appendTo('.navbar');
+                }
             });
 
             // Toggle visibility of home content and projects carousel with fade animation
             $('#projects-button').click(function(){
-                $('#home, #about').fadeOut(200, function() {
-                    $('#projects').fadeIn(200, function() {
+                $('#home, #about').fadeOut(500, function() {
+                    $('#projects').fadeIn(500, function() {
                         initializeCarousel();
                         $('.carousel').slick('setPosition'); // Refresh the Slick carousel
                     });
@@ -133,15 +137,15 @@
 
             // Home button to toggle back to home content with fade animation
             $('#home-button').click(function(){
-                $('#projects, #about').fadeOut(200, function() {
-                    $('#home').fadeIn(200);
+                $('#projects, #about').fadeOut(500, function() {
+                    $('#home').fadeIn(500);
                 });
             });
 
             // About button to toggle visibility with fade animation
             $('#about-button').click(function(){
-                $('#home, #projects').fadeOut(200, function() {
-                    $('#about').fadeIn(200);
+                $('#home, #projects').fadeOut(500, function() {
+                    $('#about').fadeIn(500);
                 });
             });
         });
