final update, hopefully

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </p>
     </div>
     <div id="projects" class="carousel-container">
+        <h2>Projects</h2>
         <div class="carousel">
             <div class="carousel-item">
                 <img src="imgs/snake.png" alt="Snake Game">
@@ -62,6 +63,8 @@
         </div>
     </div>
     <div id="about" class="content">
+        <h2>About</h2>
+        <img src="imgs/jt.png">
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec varius velit, at blandit purus. Integer non augue id felis ultricies convallis. Proin auctor justo at sapien efficitur, nec bibendum mi scelerisque. Morbi luctus nec orci at aliquet. Phasellus dictum sapien nec magna placerat, non aliquam tortor efficitur. Donec ultricies enim ac dui vehicula, nec ultricies erat pulvinar. Duis posuere felis quis orci laoreet, non pellentesque libero consequat. Aliquam erat volutpat. Mauris sodales, nisi nec ullamcorper feugiat, justo ex feugiat turpis, eu lacinia lacus nisi sit amet turpis. Aenean egestas lorem eu sem cursus, et sollicitudin nulla laoreet. Fusce at nisi vel risus vehicula pulvinar. Morbi faucibus elit non libero vestibulum, non cursus enim convallis. Nullam auctor odio sit amet felis fermentum, ac cursus libero posuere.
         </p>
