maybe final template update

--- a/index.html
+++ b/index.html
@@ -49,16 +49,20 @@
         </div>
         <div class="carousel-text">
             <div class="text" id="text-snake">
-                This is the snake game.
+                This is the snake game.<br>
+                <button><a href="Snake/index.html" target="_blank">Continue</button></a>
             </div>
             <div class="text" id="text-fish">
-                Description for the fish image.
+                Description for the fish image.<br>
+                <button><a href="ClickerGame/index.html" target="_blank">Continue</button></a>
             </div>
             <div class="text" id="text-git">
-                Description for the git image.
+                Description for the git image.<br>
+                <button><a href="https://github.com/jaimetavares-code/DiscordBot" target="_blank">Continue</button></a>
             </div>
             <div class="text" id="text-boot">
-                Description for the boot image.
+                Description for the boot image.<br>
+                <button><a href="OnlineStore/index.html" target="_blank">Continue</button></a>
             </div>
         </div>
     </div>
