--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
         <div class="carousel-text">
             <div class="text" id="text-snake">
                 This is the snake game.<br>
-                <button><a href="Snake/index.html" target="_blank">Continue</button></a>
+                <button class="buttonc"><a href="Snake/index.html" target="_blank">Continue</button></a>
             </div>
             <div class="text" id="text-fish">
                 Description for the fish image.<br>
-                <button><a href="ClickerGame/index.html" target="_blank">Continue</button></a>
+                <button class="buttonc"><a href="ClickerGame/index.html" target="_blank">Continue</button></a>
             </div>
             <div class="text" id="text-git">
                 Description for the git image.<br>
-                <button><a href="https://github.com/jaimetavares-code/DiscordBot" target="_blank">Continue</button></a>
+                <button class="buttonc"><a href="https://github.com/jaimetavares-code/DiscordBot" target="_blank">Continue</button></a>
             </div>
             <div class="text" id="text-boot">
                 Description for the boot image.<br>
-                <button><a href="OnlineStore/index.html" target="_blank">Continue</button></a>
+                <button class="buttonc"><a href="OnlineStore/index.html" target="_blank">Continue</button></a>
             </div>
         </div>
     </div>
