final final update

--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
         </div>
         <div class="carousel-text">
             <div class="text" id="text-snake">
-                This is the snake game.<br>
-                <button class="buttonc"><a href="Snake/index.html" target="_blank">Continue</button></a>
+                This is the snake game.<br><br>
+                <button class="buttonc"><a href="Snake/index.html" target="_blank">Open</button></a>
             </div>
             <div class="text" id="text-fish">
-                Description for the fish image.<br>
-                <button class="buttonc"><a href="ClickerGame/index.html" target="_blank">Continue</button></a>
+                Description for the fish image.<br><br>
+                <button class="buttonc"><a href="ClickerGame/index.html" target="_blank">Open</button></a>
             </div>
             <div class="text" id="text-git">
-                Description for the git image.<br>
-                <button class="buttonc"><a href="https://github.com/jaimetavares-code/DiscordBot" target="_blank">Continue</button></a>
+                Description for the git image.<br><br>
+                <button class="buttonc"><a href="https://github.com/jaimetavares-code/DiscordBot" target="_blank">Open</button></a>
             </div>
             <div class="text" id="text-boot">
-                Description for the boot image.<br>
-                <button class="buttonc"><a href="OnlineStore/index.html" target="_blank">Continue</button></a>
+                Description for the boot image.<br><br>
+                <button class="buttonc"><a href="OnlineStore/index.html" target="_blank">Open</button></a>
             </div>
         </div>
     </div>
